--- a/06_05_Feb_Assi.ipynb
+++ b/06_05_Feb_Assi.ipynb
@@ -164,6 +164,35 @@
     "   #CODE\n",
     "\n",
     "   class Programmer(Team_Member): # Multi-level Inheritance\n",
+    "   #CODE\n",
+    "\n",
+    "4. Hierarchical inheritance - When more than one child class is inherited from one(same) parent class.\n",
+    "\n",
+    "   - e.g\n",
+    "\n",
+    "   class Employee:\n",
+    "   #CODE\n",
+    "\n",
+    "   class Tester(Employee):\n",
+    "   #CODE\n",
+    "\n",
+    "   class Programmer(Employee): # Hierarchial Inheritance\n",
+    "   #CODE\n",
+    "\n",
+    "5. Hybrid iheritance - The combinations of simple, multiple, multilevel and hierarchical inheritance.\n",
+    "\n",
+    "   - e.g\n",
+    "\n",
+    "   class Employee:\n",
+    "   #CODE\n",
+    "\n",
+    "   class Tester(Employee):\n",
+    "   #CODE\n",
+    "\n",
+    "   class Beta-Tester(Tester):\n",
+    "   #CODE\n",
+    "\n",
+    "   class Function_Test(Tester, Beta_Tester): # Hybrid inheritance\n",
     "   #CODE\n"
    ]
   }
