--- a/17_19_Feb_Assi.ipynb
+++ b/17_19_Feb_Assi.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "source": [
     "##### OUTPUT\n",
-    "[Q2_OUTPUT.png](attachment:https://github.com/Ahmad10Raza/DS_Assignment_PW-/blob/master/17_19_feb_Q2_OUTPUT.png) "
+    "[Q2_OUTPUT.png](https://github.com/Ahmad10Raza/DS_Assignment_PW-/blob/master/17_19_feb_Q2_OUTPUT.png) "
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "source": [
     "#### OUTPUT\n",
-    "[Q4_OUTPUT.png](attachment:https://github.com/Ahmad10Raza/DS_Assignment_PW-/blob/master/17_19__Feb_Q4_OUTPUT.png)"
+    "[Q4_OUTPUT.png](https://github.com/Ahmad10Raza/DS_Assignment_PW-/blob/master/17_19__Feb_Q4_OUTPUT.png)"
    ]
   },
   {
